# projet-c

src/: CRUD.c  CRUD.h  Makefile  Makefile.am  Makefile.in  achat.txt  callbacks.c  callbacks.h  clients.txt  gestionclient  interface.c  interface.c.bak  interface.h  main.c  personne.c  personne.h  reservation.txt  tree.c  tree.h  utilisateur.txt  utilisateurad.txt
src/.deps/: CRUD.Po  callbacks.Po
srcw/: CRUD.c  CRUD.h  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gestiontroupeaux  interface.c  interface.c.bak  tree.c  tree.h  troupeaux.txt
